@@ -4,6 +4,9 @@ Changelog
 1.0b4 - unreleased
 ------------------
 
+* Fix zip import to work correctly when no manifest is supplied.
+  [elro]
+
 1.0b3 - 2011-05-23
 ------------------
 
